--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkdIn</span></a></li>						
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://github.com/edel-ops" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/edel-z-mylin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkdIn</span></a></li>						
+						<li><a href="https://gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/edel.net/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -53,9 +53,11 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hola! mi nombre es Edel</h2>
-										<p>soy estudiante de Ing. Electrónica<br />amante del desarrollo web y la programación.<br /><a href="http://html5up.net">Puedes pasar por mi Github</a>.</p>
+										<p>soy estudiante de Ing. Electrónica<br />amante del desarrollo web y la programación.<br /><a href="https://github.com/edel-ops" target="_blank">Puedes pasar por mi Github</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Soy una persona dedicada, autodidacta y trabajadora, he trabajado en el campo de la automatización industrial, así como en domótica, 
+										manejando lenguajes de programación de hardware y software. También tengo conocimientos y habilidades
+										en el área de desarrollo web como front-end, esta es un área que me gusta mucho, todo esto me ha llevado a ingresar al mundo de IOT.</p>
 								</div>
 							</section>
 
@@ -63,14 +65,13 @@
 							<section id="two">
 								<div class="container">
 									<h3>Sobre mis habilidades y conocimientos</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Estas son las tecnologias con las cuales trabajo y aprendo dia a dia.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Full stack Front-End developer </li>
 										<li class="icon solid fa-database">SQL</li>
 										<li class="icon solid fa-server">PHP Back-End</li>
 										<li class="icon solid fa-terminal">Manejo de sistemas UNIX</li>
-										<li class="icon solid fa-bolt">Enérgico</li>
-										<li class="icon solid fa-users">Trabajo en equipo</li>
+										<li class="icon solid fa-cogs">Control y automatización</li>
 									</ul>
 								</div>
 							</section>
@@ -79,13 +80,21 @@
 							<section id="three">
 								<div class="container">
 									<h3>Mis proyectos</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Aqui quiero mostrate alguno de mis proyectos realizados y las tecnologias que utilice en cada uno.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="http://localhost/pos/public" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>POS punto de venta con bootstrap3 y CodeIgniter4</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos de php y CodeIgniter4
+												con base en los tutorias de <a href="https://www.youtube.com/c/CódigosdeProgramación/">"codigos de programación".</a></p>
+											</div>
+										</article>
+										<article>
+											<a href="images/pic02.jpg" class="image"><img src="images/pic02.jpg" alt="" width="90" height="300" /></a>
+											<div class="inner">
+												<h4>Instalación y mantenimiento de cortinas automatizadas</h4>
+												<p>Instalación de cortina automatica con controladores DYNACO .</a></p>
 											</div>
 										</article>
 									</div>
@@ -96,7 +105,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Escribe tu mensaje</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Si tienes alguna duda u opinion o quieres que nos contactemos, aqui puedes dejar tu mensaje.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Tu Nombre" /></div>
