adicionando el envio de correo con back-end

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 								<div class="container">
 									<h3>Escribe tu mensaje</h3>
 									<p>Si tienes alguna duda u opinion o quieres que nos contactemos, aqui puedes dejar tu mensaje.</p>
-									<form method="post" action="#">
+									<form method="post" action="enviar.php">
 										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Tu Nombre" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu Email" /></div>
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Tu Nombre" required/></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu Email" required/></div>
 											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Tu mensaje" rows="6"></textarea></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Tu mensaje" rows="6" required></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" class="primary" value="Enviar el mensaje" /></li>
