--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<div class="container">
 									<h3>Escribe tu mensaje</h3>
 									<p>Si tienes alguna duda u opinion o quieres que nos contactemos, aqui puedes dejar tu mensaje.</p>
-									<form method="post" action="enviar.php">
+									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Tu Nombre" required/></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu Email" required/></div>
