agregue el recaptcha

--- a/index.html
+++ b/index.html
@@ -5,126 +5,147 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Portafolio Edel</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Edel Zapata</a></h1>
-					<p>Estudiante de Ing. Electrónica<br />
-					</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">Acerca de mi</a></li>
-						<li><a href="#two">Mis habilidades</a></li>
-						<li><a href="#three">Mis proyectos</a></li>
-						<li><a href="#four">Dejame un mensaje</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://github.com/edel-ops" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/edel-z-mylin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkdIn</span></a></li>						
-						<li><a href="https://gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://www.facebook.com/edel.net/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					</ul>
-				</footer>
+<head>
+	<title>Portafolio Edel</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+			<h1 id="logo"><a href="#">Edel Zapata</a></h1>
+			<p>Estudiante de Ing. Electrónica<br />
+			</p>
+		</header>
+		<nav id="nav">
+			<ul>
+				<li><a href="#one" class="active">Acerca de mi</a></li>
+				<li><a href="#two">Mis habilidades</a></li>
+				<li><a href="#three">Mis proyectos</a></li>
+				<li><a href="#four">Dejame un mensaje</a></li>
+			</ul>
+		</nav>
+		<footer>
+			<ul class="icons">
+				<li><a href="https://github.com/edel-ops" target="_blank" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/edel-z-mylin" target="_blank"
+						class="icon brands fa-linkedin-in"><span class="label">LinkdIn</span></a></li>
+				<li><a href="https://gmail.com" target="_blank" class="icon solid fa-envelope"><span
+							class="label">Email</span></a></li>
+				<li><a href="https://www.facebook.com/edel.net/" target="_blank" class="icon brands fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="one">
+				<div class="image main" data-position="center">
+					<img src="images/banner.jpeg" alt="" />
+				</div>
+				<div class="container">
+					<header class="major">
+						<h2>Hola! mi nombre es Edel</h2>
+						<p>soy estudiante de Ing. Electrónica<br />amante del desarrollo web y la programación.<br /><a
+								href="https://github.com/edel-ops" target="_blank">Puedes pasar por mi Github</a>.</p>
+					</header>
+					<p>Soy una persona dedicada, autodidacta y trabajadora, he trabajado en el campo de la
+						automatización industrial, así como en domótica,
+						manejando lenguajes de programación de hardware y software. También tengo conocimientos y
+						habilidades
+						en el área de desarrollo web como front-end, esta es un área que me gusta mucho, todo esto me ha
+						llevado a ingresar al mundo de IOT.</p>
+				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Two -->
+			<section id="two">
+				<div class="container">
+					<h3>Sobre mis habilidades y conocimientos</h3>
+					<p>Estas son las tecnologias con las cuales trabajo y aprendo dia a dia.</p>
+					<ul class="feature-icons">
+						<li class="icon solid fa-code">Full stack Front-End developer </li>
+						<li class="icon solid fa-database">SQL</li>
+						<li class="icon solid fa-server">PHP Back-End</li>
+						<li class="icon solid fa-terminal">Manejo de sistemas UNIX</li>
+						<li class="icon solid fa-cogs">Control y automatización</li>
+					</ul>
+				</div>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
+			<!-- Three -->
+			<section id="three">
+				<div class="container">
+					<h3>Mis proyectos</h3>
+					<p>Aqui quiero mostrate alguno de mis proyectos realizados y las tecnologias que utilice en cada
+						uno.</p>
+					<div class="features">
+						<article>
+							<a href="http://localhost/pos/public" target="_blank" class="image"><img
+									src="images/pic01.jpg" alt="" /></a>
+							<div class="inner">
+								<h4>POS punto de venta con bootstrap3 y CodeIgniter4</h4>
+								<p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos de php
+									y CodeIgniter4
+									con base en los tutorias de <a
+										href="https://www.youtube.com/c/CódigosdeProgramación/">"codigos de
+										programación".</a></p>
+							</div>
+						</article>
+						<article>
+							<a href="images/pic02.jpg" class="image"><img src="images/pic02.jpg" alt="" width="90"
+									height="300" /></a>
+							<div class="inner">
+								<h4>Instalación y mantenimiento de cortinas automatizadas</h4>
+								<p>Instalación de cortina automatica con controladores DYNACO .</a></p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
 
-						<!-- One -->
-							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpeg" alt="" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Hola! mi nombre es Edel</h2>
-										<p>soy estudiante de Ing. Electrónica<br />amante del desarrollo web y la programación.<br /><a href="https://github.com/edel-ops" target="_blank">Puedes pasar por mi Github</a>.</p>
-									</header>
-									<p>Soy una persona dedicada, autodidacta y trabajadora, he trabajado en el campo de la automatización industrial, así como en domótica, 
-										manejando lenguajes de programación de hardware y software. También tengo conocimientos y habilidades
-										en el área de desarrollo web como front-end, esta es un área que me gusta mucho, todo esto me ha llevado a ingresar al mundo de IOT.</p>
-								</div>
-							</section>
+			<!-- Four -->
+			<section id="four">
+				<div class="container">
+					<h3>Escribe tu mensaje</h3>
+					<p>Si tienes alguna duda u opinion o quieres que nos contactemos, aqui puedes dejar tu mensaje.</p>
+					<form name="contact" method="post" data-netlify-recaptcha="true" data-netlify="true">
+						<div class="row gtr-uniform">
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
+									placeholder="Tu Nombre" required /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
+									placeholder="Tu Email" required /></div>
+							<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" />
+							</div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Tu mensaje" rows="6"
+									required></textarea></div>
+							<div data-netlify-recaptcha="true"></div>
+							<div class="col-12">
+								<ul class="actions">
+									<li><input type="submit" class="primary" value="Enviar el mensaje" /></li>
+									<li><input type="reset" value="Borrar todo" /></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</div>
+			</section>
 
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>Sobre mis habilidades y conocimientos</h3>
-									<p>Estas son las tecnologias con las cuales trabajo y aprendo dia a dia.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Full stack Front-End developer </li>
-										<li class="icon solid fa-database">SQL</li>
-										<li class="icon solid fa-server">PHP Back-End</li>
-										<li class="icon solid fa-terminal">Manejo de sistemas UNIX</li>
-										<li class="icon solid fa-cogs">Control y automatización</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Mis proyectos</h3>
-									<p>Aqui quiero mostrate alguno de mis proyectos realizados y las tecnologias que utilice en cada uno.</p>
-									<div class="features">
-										<article>
-											<a href="http://localhost/pos/public" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>POS punto de venta con bootstrap3 y CodeIgniter4</h4>
-												<p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos de php y CodeIgniter4
-												con base en los tutorias de <a href="https://www.youtube.com/c/CódigosdeProgramación/">"codigos de programación".</a></p>
-											</div>
-										</article>
-										<article>
-											<a href="images/pic02.jpg" class="image"><img src="images/pic02.jpg" alt="" width="90" height="300" /></a>
-											<div class="inner">
-												<h4>Instalación y mantenimiento de cortinas automatizadas</h4>
-												<p>Instalación de cortina automatica con controladores DYNACO .</a></p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Escribe tu mensaje</h3>
-									<p>Si tienes alguna duda u opinion o quieres que nos contactemos, aqui puedes dejar tu mensaje.</p>
-									<form name="contact" method="post" data-netlify="true" >
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Tu Nombre" required/></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu Email" required/></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Tu mensaje" rows="6" required></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Enviar el mensaje" /></li>
-													<li><input type="reset" value="Borrar todo" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
-
-						<!-- Five -->
-						<!--
+			<!-- Five -->
+			<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -454,27 +475,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 						-->
 
-					</div>
+		</div>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; Edel Zapata. All rights reserved.</li><li>Original Design Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
+		<!-- Footer -->
+		<section id="footer">
+			<div class="container">
+				<ul class="copyright">
+					<li>&copy; Edel Zapata. All rights reserved.</li>
+					<li>Original Design Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
