envio_form_mesanje_listo

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<section id="three">
 				<div class="container">
 					<h3>Mis proyectos</h3>
-					<p>Aqui quiero mostrate alguno de mis proyectos realizados y las tecnologias que utilice en cada
+					<p>Aqui quiero mostrate algunos de mis proyectos realizados y las tecnologias que utilice en cada
 						uno.</p>
 					<div class="features">
 						<article>
