--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+			<span class="image avatar"><img src="images/avatar.jpg" alt="" height="165" /></span>
 			<h1 id="logo"><a href="#">Edel Zapata</a></h1>
 			<p>Estudiante de Ing. Electrónica<br />
 			</p>
