agregue video yt

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<span class="image avatar"><img src="images/avatar.jpg" alt="" height="165" /></span>
+			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 			<h1 id="logo"><a href="#">Edel Zapata</a></h1>
 			<p>Estudiante de Ing. Electrónica<br />
 			</p>
@@ -37,8 +37,8 @@
 							class="label">Github</span></a></li>
 				<li><a href="https://www.linkedin.com/in/edel-z-mylin" target="_blank"
 						class="icon brands fa-linkedin-in"><span class="label">LinkdIn</span></a></li>
-				<li><a href="https://gmail.com" target="_blank" class="icon solid fa-envelope"><span
-							class="label">Email</span></a></li>
+				<li><a href="https://www.youtube.com/channel/UCAuLMGBcDZ6oFDBnCJKPJhA" target="_blank"
+						class="icon brands fa-youtube"><span class="label">YT</span></a></li>
 				<li><a href="https://www.facebook.com/edel.net/" target="_blank" class="icon brands fa-facebook-f"><span
 							class="label">Facebook</span></a></li>
 			</ul>
@@ -110,7 +110,17 @@
 									height="300" /></a>
 							<div class="inner">
 								<h4>Instalación y mantenimiento de cortinas automatizadas</h4>
-								<p>Instalación de cortina automatica con controladores DYNACO .</a></p>
+								<p>Instalación de cortina automatica con controladores DYNACO.</p>
+							</div>
+						</article>
+						<article>
+							<iframe class="image" width="360" height="240" src="https://www.youtube.com/embed/z0VVK0L4vgo"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+							<div class="inner">
+								<h4>Alarma de temperatura</h4>
+								<p>Sistema digital de alarma de temperatura con arduino y myopenlab.</p>
 							</div>
 						</article>
 					</div>
