--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Hola! mi nombre es Edel</h2>
-						<p>soy estudiante de Ing. Electrónica<br />amante del desarrollo web y la programación.<br /><a
+						<p>soy estudiante de Ing. Electrónica amante del desarrollo web y la programación. <br /><a
 								href="https://github.com/edel-ops" target="_blank">Puedes pasar por mi Github</a>.</p>
 					</header>
 					<p>Soy una persona dedicada, autodidacta y trabajadora, he trabajado en el campo de la
