--- a/index.html
+++ b/index.html
@@ -149,7 +149,19 @@
         <!-- One -->
         <section id="one">
           <div class="image main" data-position="center">
-            <img src="images/banner.jpg" alt="" />
+            <!-- <img src="images/banner.jpg" alt="" /> -->
+            <div class="burbujas">
+              <div><img src="images/html_1.jpg" alt="" /></div>
+              <div><img src="images/js_1.png" alt="" /></div>
+              <div><img src="images/html_1.jpg" alt="" /></div>
+              <div><img src="images/css_1.png" alt="" /></div>
+              <div><img src="images/html_1.jpg" alt="" /></div>
+              <div><img src="images/js_1.png" alt="" /></div>
+              <div><img src="images/css_1.png" alt="" /></div>
+              <div><img src="images/html_1.jpg" alt="" /></div>
+              <div><img src="images/js_1.png" alt="" /></div>
+              <div><img src="images/css_1.png" alt="" /></div>
+            </div>
           </div>
           <div class="container">
             <header class="major">
